remove sentry